--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,13 +25,14 @@ dependencies:
   cupertino_icons: ^0.1.2
   font_awesome_flutter: ^8.8.1
   firebase_core: ^0.4.4+3
-  firebase_auth: ^0.15.5+3
+  firebase_auth: ^0.16.0
   cloud_firestore: ^0.13.4+2
   shared_preferences: ^0.5.7
   provider: ^4.0.5
   json_annotation: ^3.0.1
   weather_icons: ^2.0.1
   path_provider: ^1.6.7
+  get_it: ^4.0.2
 
 dev_dependencies:
   flutter_test:
