--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,24 +22,25 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^0.1.3
   font_awesome_flutter: ^8.8.1
   firebase_core: ^0.4.4+3
   firebase_auth: ^0.16.0
-  cloud_firestore: ^0.13.4+2
-  shared_preferences: ^0.5.7
-  provider: ^4.0.5
+  cloud_firestore: ^0.13.5
+  shared_preferences: ^0.5.7+2
+  provider: ^4.1.1
   json_annotation: ^3.0.1
   weather_icons: ^2.0.1
-  path_provider: ^1.6.7
-  device_info: ^0.4.2+3
+  path_provider: ^1.6.8
+  device_info: ^0.4.2+4
+  rounded_loading_button: ^1.0.5
 
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.0.0
+  build_runner: ^1.10.0
   json_serializable: ^3.3.0
 
 
