--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   path_provider: ^1.6.8
   device_info: ^0.4.2+4
   rounded_loading_button: ^1.0.5
+  adobe_xd: ^0.1.3
+  flutter_svg: ^0.17.4
+
 
 
 
