--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   rounded_loading_button: ^1.0.8
   adobe_xd: ^0.1.3
   line_awesome_flutter: ^1.0.1
+  social_media_buttons: ^0.1.2
+  url_launcher: ^5.5.0
 
 
 
