--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,12 +32,11 @@ dependencies:
   json_annotation: ^3.0.1
   weather_icons: ^2.0.1
   path_provider: ^1.6.8
-  device_info: ^0.4.2+4
   rounded_loading_button: ^1.0.8
-  adobe_xd: ^0.1.3
   line_awesome_flutter: ^1.0.1
   social_media_buttons: ^0.1.2
   url_launcher: ^5.5.0
+  cached_network_image: ^2.2.0+1
 
 
 
@@ -87,6 +86,3 @@ flutter:
 
 
 
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
